@@ -46,6 +46,7 @@ import com.bugzero.rarego.out.BidRepository;
 import com.bugzero.rarego.out.es.ProductSearchClient;
 import com.bugzero.rarego.shared.auction.dto.AuctionSortType;
 import com.bugzero.rarego.shared.auction.type.AuctionStatus;
+import com.bugzero.rarego.shared.product.dto.AuctionInfoResponseDto;
 import com.bugzero.rarego.shared.product.dto.ProductAuctionResponseDto;
 
 import lombok.RequiredArgsConstructor;
@@ -68,15 +69,15 @@ public class AuctionReadUseCase {
     // 경매 입찰 기록 조회
     public PagedResponseDto<BidLogResponseDto> getBidLogs(Long auctionId, Pageable pageable) {
         Page<Bid> bidPage = bidRepository.findAllByAuctionIdOrderByBidTimeDesc(auctionId, pageable);
-        Map<Long, String> bidderMap = getBidderPublicIdMap(bidPage.getContent());
+        Map<Long, AuctionMember> bidderMap = getBidderMap(bidPage.getContent());
 
         Page<BidLogResponseDto> dtoPage = bidPage.map(bid -> {
-            String publicId = bidderMap.get(bid.getBidderId());
-            if (publicId == null) {
+            AuctionMember bidder = bidderMap.get(bid.getBidderId());
+            if (bidder == null) {
                 log.warn("입찰자 정보 누락됨: bidId={}, bidderId={}", bid.getId(), bid.getBidderId());
-                publicId = "unknown";
+                return BidLogResponseDto.from(bid, "unknown", "unknown");
             }
-            return BidLogResponseDto.from(bid, publicId);
+            return BidLogResponseDto.from(bid, bidder.getPublicId(), bidder.getNickname());
         });
 
         return new PagedResponseDto<>(dtoPage.getContent(), PageDto.from(dtoPage));
@@ -283,10 +284,37 @@ public class AuctionReadUseCase {
         return new PagedResponseDto<>(finalDtos, PageDto.from(bookmarkPage));
     }
 
-    // === Helper Methods ===
+	public AuctionInfoResponseDto getAuctionInfoByProductId(Long productId) {
+		Auction auction = support.findAuctionByProductId(productId);
+		return toInfoResponseDto(auction);
+	}
 
-    private List<AuctionListResponseDto> convertToAuctionListDtos(List<Auction> auctions) {
-        if (auctions.isEmpty()) return Collections.emptyList();
+	public List<AuctionInfoResponseDto> getAuctionInfosByProductIds(List<Long> productIds) {
+		if (productIds == null || productIds.isEmpty()) {
+			return List.of();
+		}
+
+		List<Auction> auctions = support.findAllByProductIds(productIds);
+
+		return auctions.stream()
+			.map(this::toInfoResponseDto)
+			.toList();
+	}
+
+	// === Helper Methods ===
+
+	private AuctionInfoResponseDto toInfoResponseDto(Auction auction) {
+		return new AuctionInfoResponseDto(
+			auction.getProductId(),
+			auction.getId(),
+			auction.getStartPrice(),
+			auction.getStartTime()
+		);
+	}
+
+	private List<AuctionListResponseDto> convertToAuctionListDtos(List<Auction> auctions) {
+		if (auctions.isEmpty())
+			return Collections.emptyList();
 
         Set<Long> auctionIds = auctions.stream().map(Auction::getId).collect(Collectors.toSet());
         Set<Long> productIds = auctions.stream().map(Auction::getProductId).collect(Collectors.toSet());
@@ -313,11 +341,11 @@ public class AuctionReadUseCase {
             .toList();
     }
 
-    private Map<Long, String> getBidderPublicIdMap(List<Bid> bids) {
+    private Map<Long, AuctionMember> getBidderMap(List<Bid> bids) {
         if (bids.isEmpty()) return Collections.emptyMap();
         Set<Long> bidderIds = bids.stream().map(Bid::getBidderId).collect(Collectors.toSet());
         return auctionMemberRepository.findAllById(bidderIds).stream()
-            .collect(Collectors.toMap(AuctionMember::getId, AuctionMember::getPublicId));
+            .collect(Collectors.toMap(AuctionMember::getId, Function.identity()));
     }
 
     private Map<Long, Auction> getAuctionMap(List<Bid> bids) {
